# IPOWBDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: P2.md
noteboooks/: P2.md  P3.ipynb  P4.ipynb  P5.ipynb  P6.ipynb  P7.ipynb  P8.ipynb  P9.ipynb  start.ipynb
src/: README.md
src/examples/: demo_validation.py
src/generators/: base.py  csprng.py  hmac_drbg.py  mt19937.py  pcg.py
src/ipow/examples/: demo_validation.py
src/ipow/generators/: __init__.py  anu_qrng.py  base.py  blumblumshub.py  chacha20rng.py  chaotic.py  hccsrng.py  jsf32.py  lcg.py  mod_exp_feistel_rng.py  mrg32k3a.py  philox.py  splitmix64.py  threefry.py  trng_mock.py  urng.py  well512a.py  xoshiro256.py
src/ipow/tests/: __init__.py  basic_stats.py  external_tools.py  validation.py  visual.py
src/tests/: __init__.py  statistical.py
