[project]
name = "ipow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

